[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gls-failure-reconstruction-framework"
version = "0.1.0"
description = "Reproducible framework to replay and classify GLS debug failures from VCS/SpyGlass-style artifacts."
requires-python = ">=3.9"
dependencies = [
  "pyyaml>=6.0",
  "rich>=13.0"
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
gls-replay = "gls_replay.cli:main"

[tool.setuptools]
packages = ["gls_replay"]
